--- a/src/main/resources/assets/overcraft/lang/en_us.json
+++ b/src/main/resources/assets/overcraft/lang/en_us.json
@@ -1,3 +1,8 @@
 {
-  "item.examplemod.training_rifle": "Training Rifle"
+  "item.examplemod.training_rifle": "Training Rifle",
+  "key.categories.overcraft": "Overcraft",
+  "key.overcraft.reload": "Reload",
+  "key.overcraft.ability_e": "Ability (E)",
+  "key.overcraft.ability_rmb": "Ability (Right Click)",
+  "key.overcraft.ultimate": "Ultimate"
 }
